RESOLVED FIXED146736
InteractionInformationAtPosition bounds seem wrong on many sites, affects apple.com
https://bugs.webkit.org/show_bug.cgi?id=146736
Summary InteractionInformationAtPosition bounds seem wrong on many sites, affects app...
Beth Dakin
Reported 2015-07-08 12:25:04 PDT
http://trac.webkit.org/changeset/186132/ changed the bounds for InteractionInformationAtPosition. The image-related changes are good, but the link-related changes feel wrong on many sites. We should revert the change for now. rdar://problem/21655549
Attachments
Patch (2.20 KB, patch)
2015-07-08 12:31 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-07-08 12:31:07 PDT
Beth Dakin
Comment 2 2015-07-08 13:21:35 PDT
Note You need to log in before you can comment on or make changes to this bug.