InteractionInformationAtPosition bounds seem wrong on many sites, affects apple.com https://bugs.webkit.org/show_bug.cgi?id=146736 -and corresponding- rdar://problem/21655549

Reviewed by Tim Horton.

http://trac.webkit.org/changeset/186132/ changed the bounds for
InteractionInformationAtPosition. The image-related changes are good, but the
link-related changes feel wrong on many sites. We should revert the change for now
and just use the absoluteBoundingBoxRect() for non-images.
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getPositionInformation):



Canonical link: https://commits.webkit.org/164816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186522 268f45cc-cd09-0410-ab3c-d52691b4dbfc